--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,6 @@
   --dark-highlight: #6d28d9;
 }
 
-
 body {
   box-sizing: border-box;
   font-family: var(--ff-main);
@@ -35,39 +34,121 @@ body {
     'nav main';
 }
 
+
 /* Header*/
 
 header {
   grid-area: header;
   display: grid;
   grid-template-columns: 3fr 2fr;
-  padding: 0.5rem 2rem;
+  padding: 1rem 2rem;
   background-color: var(--light-shade);
-}
-
-header img {
-  height: 40px;
-  width: 40px;
+  position: relative;
+  box-shadow: 0 0 5px black;
 }
 
 .header-search {
-    display: flex;
-    gap: var(--s-m);
+  display: flex;
+  align-items: center;
+  gap: var(--s-m);
+}
 
+.header-search i {
+  font-size: var(--s-m);
+}
+
+.header-search-input {
+  border: 1px solid var(--light-shade);
+  border-radius: 10px;
+  height: var(--s-m);
+  width: 60%;
+  outline: 0;
+  background-color: var(--medium-shade);
 }
 
 .header-user-profile {
-    display: flex;
-    gap: var(--s-m);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: var(--s-m);
+}
+
+.header-user-profile i {
+  font-size: var(--s-m);
+}
+
+.header-profile-img {
+  border-radius: 50%;
+  max-height: 50px;
+  width: 50px;
+  border: 2px solid var(--dark-shade);
+  overflow: hidden;
+}
+
+.header-profile-img img {
+  display: block;
+  width: 100%;
+  height: 4rem;
+  object-fit: cover;
+}
+
+.header-profile-username {
+  font-size: var(--s-s);
+  font-weight: var(--fw-bold);
 }
 
 .header-welcome {
-    display: flex;
+  display: flex;
+  align-items: center;
+  gap: 2rem;
 }
 
+.header-welcome-img {
+  border-radius: 50%;
+  height: 5rem;
+  width: 5rem;
+  border: 2px solid var(--dark-shade);
+  overflow: hidden;
+}
+
+.header-welcome-img img {
+  display: block;
+  height: 6rem;
+  width: 100%;
+  object-fit: cover;
+}
+
+.welcome-text-container {
+  font-weight: var(--fw-bold);
+}
+
+.welcome-small-text {
+  font-size: 1rem;
+  margin-bottom: -20px;
+}
+
+.welcome-large-text {
+  font-size: var(--s-m);
+}
 .header-buttons {
-    display: flex;
-    gap: var(--s-m)
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: var(--s-m);
+}
+
+.header-button {
+  display: inline-block;
+  height: var(--s-l);
+  width: auto;
+  border: 2px solid var(--bright);
+  border-radius: 0.5em;
+  text-decoration: none;
+  font-weight: var(--fw-reg);
+  color: var(--bright);
+  background-color: var(--light-highlight);
+  text-align: center;
+  box-shadow: 0 0  5px black;
 }
 
 /* Nav */
@@ -89,11 +170,15 @@ nav {
   justify-content: center;
 }
 
+.nav-title i {
+  font-size: var(--s-xl);
+}
+
 .nav-title-text {
-    font-size: var(--s-l);
-    font-weight: var(--fw-bold);
-    color: var(--bright);
-    padding: 0.5rem;
+  font-size: var(--s-l);
+  font-weight: var(--fw-bold);
+  color: var(--bright);
+  padding: 0.5rem;
 }
 
 .nav-main-icons-container,
@@ -107,42 +192,45 @@ nav {
 }
 
 .nav-icon {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0.2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.2rem;
 }
 
-.nav-icon:hover, .nav-title:hover {
-    cursor: pointer;
-    border-bottom: 2px solid var(--dark-shade);
+.nav-icon:hover,
+.nav-title:hover {
+  cursor: pointer;
+  border-bottom: 2px solid var(--dark-shade);
 }
 
-.nav-icon:hover .nav-text, .nav-title:hover .nav-title-text {
-    color: var(--dark-shade);
+.nav-icon:hover .nav-text,
+.nav-title:hover .nav-title-text,
+.nav-title:hover i,
+.nav-icon:hover i {
+  color: var(--dark-shade);
 }
 
-.nav-icon:hover img, .nav-title:hover img {
-    filter: invert(30%);
+.nav-icon:hover img,
+.nav-title:hover img {
+  filter: invert(30%);
 }
 .nav-text {
-    font-size: var(--s-s);
-    font-weight: var(--fw-bold);
-    color: var(--bright);
-    padding: 0.5rem;
+  font-size: var(--s-s);
+  font-weight: var(--fw-bold);
+  color: var(--bright);
+  padding: 0.5rem;
 }
 
-nav img {
-  height: 25px;
-  width: 25px;
-  filter: invert(100%);
+nav i {
+  font-size: var(--s-m);
+  color: var(--bright);
 }
-
 
 /* Main section*/
 
 main {
-  background-color: var(--medium-shade);  
+  background-color: var(--medium-shade);
   grid-area: main;
   display: grid;
   grid-template-columns: auto 300px;
