--- a/styles.css
+++ b/styles.css
@@ -19,8 +19,8 @@
   --bright: #f8fafc;
   --light-highlight: #a78bfa;
   --dark-highlight: #6d28d9;
-  --shadow-full: 0 0 5px black;
-  --shadow-bottom: 2px 1px 3px black;
+  --shadow-full: 0 0 5px var(--dark-shade);
+  --shadow-bottom: 2px 1px 3px var(--dark-shade);
 }
 
 body {
@@ -247,6 +247,7 @@ main {
   grid-area: main;
   display: grid;
   grid-template-columns: auto 300px;
+  grid-template-rows: auto;
   grid-template-areas:
     'projects announcements'
     'projects trending';
@@ -262,7 +263,6 @@ main h3 {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-auto-rows: min-content;
-  grid-row: 1/-1;
   gap: 1rem;
   padding: 1rem;
 }
@@ -381,5 +381,38 @@ main h3 {
 }
 
 .trending-description {
+
+}
+
+/* media queries */
+
+@media only screen and (max-width: 880px) {
+  .nav-title-text {
+    display: none;
+  }
+
+  .nav-text {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 880px) {
+  .header-welcome {
+    display: none;
+  }
+  .header-buttons {
+    grid-column: 1/-1;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  main {
+    grid-template-columns: min-content;
+    grid-template-areas:
+    'projects'
+    'announcements'
+    'trending';
+    justify-content: center;
+  }
 
 }
