--- a/styles.css
+++ b/styles.css
@@ -406,6 +406,16 @@ main h3 {
 }
 
 @media only screen and (max-width: 700px) {
+  header {
+    grid-template-columns: 1fr;
+    align-items: center;
+    justify-items: center;
+    gap: 0.5rem;
+  }
+
+  .header-search {
+    margin-left: 3rem;
+  }
   main {
     grid-template-columns: min-content;
     grid-template-areas:
