--- a/styles.css
+++ b/styles.css
@@ -13,14 +13,16 @@
   --fw-reg: 400;
   --fw-bold: 700;
   /* colours */
-  --light-shade: #f1f5f9;
-  --medium-shade: #cbd5e1;
+  --light-shade: #e4e4e7;
+  --medium-shade: #9ca3af;
   --dark-shade: #475569;
-  --bright: #f8fafc;
-  --light-highlight: #a78bfa;
+  --bright: #e4e5e6;
+  --light-highlight: #6d28d9;
   --dark-highlight: #6d28d9;
   --shadow-full: 0 0 5px var(--dark-shade);
   --shadow-bottom: 2px 1px 3px var(--dark-shade);
+  --text-bold: #27272a;
+  --text-light: ;
 }
 
 body {
@@ -37,19 +39,21 @@ body {
 }
 
 body.dark {
-  --light-shade: #f1f5f9;
-  --medium-shade: #cbd5e1;
-  --dark-shade: #475569;
-  --bright: #f8fafc;
-  --light-highlight: #6d28d9;
+  --light-shade: #3f3f46;
+  --medium-shade: #18181b;
+  --dark-shade: #0f172a;
+  --bright: #e2e8f0;
+  --light-highlight: #4c1d95;
   --dark-highlight: #4c1d95;
-  --shadow-full: 0 0 5px var(--dark-shade);
-  --shadow-bottom: 2px 1px 3px var(--dark-shade);
-
+  --shadow-full: 0 0 5px var(--bright);
+  --shadow-bottom: 2px 1px 3px var(--bright);
+  --text-bold: #ced1d4;
+  --text-light: ;
 }
 
 h3 {
   font-size: var(--s-m);
+  color: var(--text-bold);
 }
 
 /* Header*/
@@ -61,7 +65,7 @@ header {
   padding: 1rem 2rem;
   background-color: var(--light-shade);
   position: relative;
-  box-shadow: var(--shadow-bottom)
+  box-shadow: var(--shadow-bottom);
 }
 
 .header-search {
@@ -72,10 +76,11 @@ header {
 
 .header-search i {
   font-size: var(--s-m);
+  color: var(--text-bold);
 }
 
 .header-search-input {
-  border: 1px solid var(--light-shade);
+  border: 1px solid var(--text-bold);
   border-radius: 10px;
   height: var(--s-m);
   width: 60%;
@@ -92,13 +97,14 @@ header {
 
 .header-user-profile i {
   font-size: var(--s-m);
+  color: var(--text-bold);
 }
 
 .header-profile-img {
   border-radius: 50%;
   max-height: 50px;
   width: 50px;
-  border: 2px solid var(--dark-shade);
+  border: 2px solid var(--text-bold);
   overflow: hidden;
 }
 
@@ -112,6 +118,7 @@ header {
 .header-profile-username {
   font-size: var(--s-s);
   font-weight: var(--fw-bold);
+  color: var(--text-bold);
 }
 
 .header-welcome {
@@ -124,7 +131,7 @@ header {
   border-radius: 50%;
   height: 5rem;
   width: 5rem;
-  border: 2px solid var(--dark-shade);
+  border: 2px solid var(--text-bold);
   overflow: hidden;
 }
 
@@ -142,10 +149,12 @@ header {
 .welcome-small-text {
   font-size: 1rem;
   margin-bottom: -20px;
+  color: var(--text-bold);
 }
 
 .welcome-large-text {
   font-size: var(--s-m);
+  color: var(--text-bold);
 }
 .header-buttons {
   display: flex;
@@ -155,17 +164,24 @@ header {
 }
 
 .header-button {
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: var(--s-l);
   width: auto;
+  padding: var(--s-xs);
   border: 2px solid var(--bright);
   border-radius: 0.5em;
   text-decoration: none;
   font-weight: var(--fw-reg);
   color: var(--bright);
   background-color: var(--light-highlight);
-  text-align: center;
   box-shadow: var(--shadow-full);
+}
+
+.header-button:hover {
+  transform: scale(1.1);
+  cursor: pointer;
 }
 
 /* Nav */
@@ -256,6 +272,7 @@ nav i {
   background-color: var(--light-highlight);
   outline: none;
   border: none;
+  padding: 0;
 }
 
 /* Main section*/
@@ -269,10 +286,6 @@ main {
   grid-template-areas:
     'projects announcements'
     'projects trending';
-}
-
-main h3 {
-
 }
 
 /* Projects section */
@@ -291,21 +304,21 @@ main h3 {
 
 .projects-card {
   background-color: var(--light-shade);
+  display: flex;
+  flex-direction: column;
   box-shadow: var(--shadow-full);
   border-radius: 0.5em;
-  padding: 1rem;
+  padding: 0.5rem;
+  border-left: 0.4rem solid var(--light-highlight);
 }
 
 .projects-card-text {
-
 }
 
 .projects-card-title {
-
 }
 
 .projects-card-description {
-
 }
 
 .projects-card-button-container {
@@ -313,11 +326,9 @@ main h3 {
 }
 
 .projects-card-button {
-
 }
 
 .projects-card-button i {
-
 }
 
 /* Announcement section */
@@ -328,7 +339,6 @@ main h3 {
 }
 
 .announcements-title {
-
 }
 
 .announcements-container {
@@ -340,20 +350,22 @@ main h3 {
 }
 
 .announcements-element {
-
 }
 
-.announcements-element:nth-child(2), .announcements-element-one{
-  border-bottom: 1px solid var(--dark-shade)
+.announcements-element:nth-child(2),
+.announcements-element-one {
+  border-bottom: 1px solid var(--dark-shade);
 }
 
 .announcements-bold-text {
   font-size: var(--s-xs);
   font-weight: var(--fw-bold);
+  color: var(--text-bold);
 }
 
 .announcements-description-text {
   font-size: var(--s-xs);
+  color: var(--text-bold);
 }
 
 /* Trending section */
@@ -364,7 +376,6 @@ main h3 {
 }
 
 .trending-title {
-
 }
 
 .trending-container {
@@ -381,25 +392,42 @@ main h3 {
   gap: 1rem;
 }
 
-.trending-em-img {
+.trending-element a {
+  text-decoration: none;
+  color: var(--text-bold);
+}
 
+.trending-description a:hover {
+  cursor: pointer;
+  color: var(--dark-highlight);
+}
+
+.trending-em-img {
+  border-radius: 50%;
+  max-height: 50px;
+  width: 50px;
+  border: 2px solid var(--text-bold);
+  overflow: hidden;
 }
 
 .trending-em-img img {
-  width: 40px;
-  height: 40px;
+  display: block;
+  width: 100%;
+  height: 3rem;
+  object-fit: cover;
 }
 
 .trending-em-text {
-
+  color: var(--text-bold);
+  padding: 0;
 }
 
 .trending-username {
-
+  margin-bottom: -10px;
 }
 
 .trending-description {
-
+  font-size: var(--s-xs);
 }
 
 /* media queries */
@@ -437,10 +465,13 @@ main h3 {
   main {
     grid-template-columns: min-content;
     grid-template-areas:
-    'projects'
-    'announcements'
-    'trending';
+      'projects'
+      'announcements'
+      'trending';
     justify-content: center;
   }
-
+  .projects {
+    grid-template-columns:1fr;
+    width: 80vw;
+  }
 }
