--- a/styles.css
+++ b/styles.css
@@ -25,8 +25,11 @@
   --text-light: ;
 }
 
-body {
+* {
   box-sizing: border-box;
+}
+
+body {
   font-family: var(--ff-main);
   width: 100%;
   height: 100%;
@@ -261,6 +264,7 @@ nav {
   font-size: var(--s-s);
   font-weight: var(--fw-bold);
   color: var(--bright);
+  border-bottom: 2px solid transparent;
   padding: 0.5rem;
   display: block;
 }
